<resources>
    <string name="app_name">GoodBudget</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="you_ve_spent_r1_200_this_week_ntop_category_groceries">You’ve spent R1,200 this week\nTop category: Groceries</string>
    <string name="spending_highlights">Spending Highlights</string>
    <string name="budget_categories">Budget Categories</string>
    <string name="total_balance">Total Balance</string>
    <string name="r12_300_00">R12,300.00</string>
    <string name="welcome_back_user">Welcome back, User 👋</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an Account? Sign up</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_e_mail_or_username">Enter E-mail or Username</string>
    <string name="login_to_your_profile">Login to your Profile</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_expenses">add_expenses</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="net_worth">Net Worth</string>
    <string name="welcome_khaya">Welcome, Khaya</string>
    <string name="create_password">Create Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="forget_enter_e_mail_or_username_">Enter E-mail or Username</string>
</resources>